# Gemni

./: README.md
LLM_Feedback_Module/: .gitignore  README.md  pyproject.toml  requirements.txt
LLM_Feedback_Module/ai_ml_api/: image_generation_api.py  model_selector.py  speech_to_text_api.py  text_completion_api.py  text_to_speech_api.py
LLM_Feedback_Module/ai_ml_api/inference/: image_inference.py  speech_inference.py  text_inference.py
LLM_Feedback_Module/app/: config.py  llm_feedback.py  model_selector.py  model_tester.py
LLM_Feedback_Module/app/clients/01-web_static/: script.js
LLM_Feedback_Module/app/clients/02-tk/: desktop_client2.py
LLM_Feedback_Module/app/clients/03-fastHTML/: app_v1.py  app_v2.py  app_v3.py  (+1 more)
LLM_Feedback_Module/app/data/: cache.json  education_feedback.db  models.json  quiz.db  test_data.json
LLM_Feedback_Module/app/server/: __main__.py  llm_feedback.py  socket_server.py
LLM_Feedback_Module/models/: image_generation.py  model_selector.py  model_selector_v2.py  model_selector_v3.py  model_tester.py  model_tester_v2.py  speech_to_text.py  test_data.json  text_completion.py  text_to_speech.py
LLM_Feedback_Module/sandbox/: config.py  response.txt  text_client.py  text_server.py
LLM_Feedback_Module/sandbox/sockets/: database.py  desktop_client.py  education_feedback.db  llm_fb.py  main.py  quiz.db  quiz_app.py  quiz_db.py  quiz_gui.py  quiz_gui2.py  quiz_gui3.py  socket_server.py  temp.db
LLM_Feedback_Module/sandbox/websockets/: llm_fb.py  ws_server.py
LLM_Feedback_Module/utils/: api_utils.py  config.py  model_utils.py
(+33 files in other folders)
