[project]
name = "llm-feedback-module"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kennmwai", email = "foobar@mail.com" },
    { name = "Kemboiray", email = "foobar@mail.com" },
    { name = "FourtyThree43", email = "foobar@mail.com" }
]
dependencies = [
    "openai==1.36.1",
    "requests==2.32.3",
    "websockets==12.0",
    "python-fasthtml>=0.5.1",
]
readme = "README.md"
requires-python = ">= 3.12"
license = { text = "MIT" }
classifiers = ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
server = { cmd = "python server" }
client1 = { cmd = ["python", "-mhttp.server", "9000", "-dclients/01-web_static"] }
client4 = { cmd = "python clients/04-quiz_tk" }


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_feedback_module"]
